Alignment corrected

--- a/listenbrainz/webserver/static/css/main.less
+++ b/listenbrainz/webserver/static/css/main.less
@@ -223,11 +223,15 @@ h2.page-title {
 .coverArtGrid {
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: repeat(3, 125px);
-  grid-template-rows: repeat(3, 125px);
+  grid-template-columns: repeat(5, 125px);
+  grid-template-rows: repeat(5, 125px);
   grid-auto-flow: row;
   justify-content: center;
   margin: 10px;
+}
+.vertical-align {
+  display: flex;
+  align-items: center;
 }
 .coverArtGrid div img {
 	-webkit-transform: scale(1);
@@ -236,8 +240,8 @@ h2.page-title {
 	transition: .3s ease-in-out;
 }
 .coverArtGrid div:hover img {
-	-webkit-transform: scale(1.3);
-	transform: scale(1.3);
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 
